--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- fav icon -->
     <link rel="icon" type="image/svg+xml" href="/favicon boolBnB-red.png" />
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <!--  -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- titolo -->
     <title>BoolBnB</title>
   </head>
   <body>
